--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
+# Hidden files and folders
+.*
+.*/
+
+# Exceptions for hidden files and folders
+!.github
+!.gitignore
+!.editorconfig
+
 HELP.md
 .gradle
 build/
