--- a/.github/workflows/master_ADP-Backend-dev.yml
+++ b/.github/workflows/master_ADP-Backend-dev.yml
@@ -3,32 +3,42 @@
 
 name: Build and deploy JAR app to Azure Web App - ADP-Backend-dev
 
-on:
-  push:
-    branches:
-      - master
-  workflow_dispatch:
+name: Build
+on: [push, pull_request]
 
 jobs:
   build:
+    name: Build
     runs-on: ubuntu-latest
-
     steps:
-    - uses: actions/checkout@v2
-
-    - name: Set up Java version
-      uses: actions/setup-java@v1
-      with:
-        java-version: '11'
-
-    - name: Build with Maven
-      run: mvn clean install
-
-    - name: Upload artifact for deployment job
-      uses: actions/upload-artifact@v2
-      with:
-        name: java-app
-        path: '${{ github.workspace }}/target/*.jar'
+      - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
+      - name: Set up JDK 11
+        uses: actions/setup-java@v1
+        with:
+          java-version: 11
+      - name: Cache SonarCloud packages
+        uses: actions/cache@v1
+        with:
+          path: ~/.sonar/cache
+          key: ${{ runner.os }}-sonar
+          restore-keys: ${{ runner.os }}-sonar
+      - name: Cache Gradle packages
+        uses: actions/cache@v1
+        with:
+          path: ~/.gradle/caches
+          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle') }}
+          restore-keys: ${{ runner.os }}-gradle
+      - name: Build and analyze
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        run: ./gradlew build --info
+      - uses: actions/upload-artifact@v2
+        with:
+          name: java-app
+          path: build/libs/*.jar
 
   deploy:
     runs-on: ubuntu-latest
