--- a/.github/workflows/master_ADP-Backend-dev.yml
+++ b/.github/workflows/master_ADP-Backend-dev.yml
@@ -63,3 +63,4 @@ jobs:
         slot-name: 'production'
         publish-profile: ${{ secrets.AzureAppService_PublishProfile_fe914f0ff88d4d039f087ddb78b946c8 }}
         package: '*.jar'
+      uses: PublishBuildArtifacts@1
