--- a/.github/workflows/master_ADP-Backend-dev.yml
+++ b/.github/workflows/master_ADP-Backend-dev.yml
@@ -38,6 +38,8 @@ jobs:
         with:
           name: java-app
           path: build/libs/*.jar
+      - name: list the content od directories
+        run:  ls -la
 
   deploy:
     runs-on: ubuntu-latest
@@ -62,4 +64,4 @@ jobs:
         app-name: 'ADP-Backend-dev'
         slot-name: 'production'
         publish-profile: ${{ secrets.AzureAppService_PublishProfile_fe914f0ff88d4d039f087ddb78b946c8 }}
-        package: '*.gradle'
+        package: '*.jar'
