--- a/.github/workflows/master_ADP-Backend-dev.yml
+++ b/.github/workflows/master_ADP-Backend-dev.yml
@@ -52,7 +52,7 @@ jobs:
       with:
         java-version: 11
         path: ~/.gradle/caches
-        key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*') }}
+        key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle') }}
         restore-keys: ${{ runner.os }}-gradle
 
     - name: Deploy to Azure Web App
