--- a/.github/workflows/master_ADPBackend.yml
+++ b/.github/workflows/master_ADPBackend.yml
@@ -43,7 +43,7 @@ jobs:
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v2
         with:
-          app-name: 'ADPBackend'
+          app-name: 'sample-backend-springboot-java-app'
           slot-name: 'production'
-          publish-profile: ${{ secrets.AzureAppService_PublishProfile_07085d896f6849a4a3834f5a52065160 }}
+          publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
           package: 'build/libs/*.jar'
