--- a/.github/workflows/master_sample-backend-springboot-java-app.yml
+++ b/.github/workflows/master_sample-backend-springboot-java-app.yml
@@ -11,24 +11,37 @@ on:
 
 jobs:
   build:
+    name: Build
     runs-on: ubuntu-latest
-
     steps:
-    - uses: actions/checkout@v2
-
-    - name: Set up Java version
-      uses: actions/setup-java@v1
-      with:
-        java-version: '11'
-
-    - name: Build with Maven
-      run: mvn clean install
-
-    - name: Upload artifact for deployment job
-      uses: actions/upload-artifact@v2
-      with:
-        name: java-app
-        path: '${{ github.workspace }}/target/*.jar'
+      - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
+      - name: Set up JDK 11
+        uses: actions/setup-java@v1
+        with:
+          java-version: 11
+      - name: Cache SonarCloud packages
+        uses: actions/cache@v1
+        with:
+          path: ~/.sonar/cache
+          key: ${{ runner.os }}-sonar
+          restore-keys: ${{ runner.os }}-sonar
+      - name: Cache Gradle packages
+        uses: actions/cache@v1
+        with:
+          path: ~/.gradle/caches
+          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle') }}
+          restore-keys: ${{ runner.os }}-gradle
+      - name: Build and analyze
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        run: ./gradlew build --info
+      - uses: actions/upload-artifact@v2
+        with:
+          name: java-app
+          path: build/libs/*.jar
 
   deploy:
     runs-on: ubuntu-latest
@@ -50,4 +63,3 @@ jobs:
         app-name: 'sample-backend-springboot-java-app'
         slot-name: 'production'
         publish-profile: ${{ secrets.AzureAppService_PublishProfile_8dfe9e45ef8e4c49ae9d547b7d4c6ef3 }}
-#         package: '*.jar'
