--- a/.github/workflows/master_ADP-Backend-dev.yml
+++ b/.github/workflows/master_ADP-Backend-dev.yml
@@ -60,4 +60,4 @@ jobs:
       with:
         app-name: 'sample-backend-springboot-java-app'
         slot-name: 'production'
-        publish-profile: ${{ secrets. }}
+        publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
