--- a/.github/workflows/master_ADP-Backend-dev.yml
+++ b/.github/workflows/master_ADP-Backend-dev.yml
@@ -40,5 +40,5 @@ jobs:
         with:
           app-name: 'sample-backend-springboot-java-app'
           slot-name: 'production'
-          publish-profile: ${{ secrets. }}
+          publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
           package: 'build/libs/*.jar'
